--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "cashew-web",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://codeyimin.github.io/Cashew",
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/styled": "^11.11.0",
@@ -15,8 +16,14 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
   "scripts": {
-    "start": "react-scripts start"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
