Setup server for Nginx

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "src/main.ts",
   "scripts": {
     "start": "concurrently \"nodemon --transpileOnly\" \"npm run docker\" \"npm run prisma:dev\"",
-    "prisma:dev": "nodemon -e prisma -w prisma -x \"npx prisma db push --accept-data-loss && npx prisma studio --browser none\" "
+    "prisma:dev": "nodemon -e prisma -w prisma -x \"npx prisma db push --accept-data-loss && npx prisma studio --browser none\" ",
+    "run:dist": "tsc --outDir dist && node dist/main.js"
   },
   "keywords": [],
   "author": "",
