--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "cashew-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://codeyimin.github.io/Cashew",
+  "homepage": "https://yiminsun.com/cashew",
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/styled": "^11.11.0",
@@ -15,9 +15,6 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
